tdf#143318 DOCX import: fix missing redlines in flying tables

makeRedline() exceptions (in the case of already existing
redlines) skip the creation of the next (not existing yet)
redlines in tables inside fly frames. Here: a tracked table
moving revealed the problem, with the missing rejection of the
new position, i.e. the "new" (second) table of the document.

Note: fix also collecting redlines within tables: IsInTable()
isn't true in the first cell of the table, losing the
redline here, so it's replaced with m_nTableDepth > 0.

Follow-up to commit 7f3c0bbc174b9b0316991c174ca3b407c0e3d141
"tdf#143510 DOCX import: fix tracked table drag & drop".

Change-Id: Icf6dd62eb950e5af6a75353dffabb9e9433c1b44
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/120333
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>