writerfilter/source/dmapper/PropertyMap.cxx
@@ -1473,7 +1473,14 @@ void SectionPropertyMap::CloseSectionGroup( DomainMapper_Impl& rDM_Impl )
                     xCrsr->goRight(redPos[i/3], false);
                     xCrsr->goRight(redLen[i/3], true);
                     uno::Reference < text::XRedline > xRedline( xCrsr, uno::UNO_QUERY_THROW );
-                    xRedline->makeRedline( sType, aRedlineProperties );
+                    try
+                    {
+                        xRedline->makeRedline( sType, aRedlineProperties );
+                    }
+                    catch (const uno::Exception&)
+                    {
+                        DBG_UNHANDLED_EXCEPTION("writerfilter", "makeRedline() failed");
+                    }
                 }
             }
             catch (const uno::Exception&)
